test/y.output
Grammar

    0 $accept: line_list $end

    1 line_list: line
    2          | line_list line

    3 line: expression CR

    4 expression: term
    5           | expression ADD term
    6           | expression SUB term

    7 term: single
    8     | term MUL single
    9     | term DIV single

   10 single: NUM
   11       | VAR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUM (258) 10
    ADD (259) 5
    SUB (260) 6
    MUL (261) 8
    DIV (262) 9
    VAR (263) 11
    CR (264) 3


Nonterminals, with rules where they appear

    $accept (10)
        on left: 0
    line_list (11)
        on left: 1 2
        on right: 0 2
    line (12)
        on left: 3
        on right: 1 2
    expression (13)
        on left: 4 5 6
        on right: 3 5 6
    term (14)
        on left: 7 8 9
        on right: 4 5 6 8 9
    single (15)
        on left: 10 11
        on right: 7 8 9


State 0

    0 $accept: . line_list $end

    NUM  shift, and go to state 1
    VAR  shift, and go to state 2

    line_list   go to state 3
    line        go to state 4
    expression  go to state 5
    term        go to state 6
    single      go to state 7


State 1

   10 single: NUM .

    $default  reduce using rule 10 (single)


State 2

   11 single: VAR .

    $default  reduce using rule 11 (single)


State 3

    0 $accept: line_list . $end
    2 line_list: line_list . line

    $end  shift, and go to state 8
    NUM   shift, and go to state 1
    VAR   shift, and go to state 2

    line        go to state 9
    expression  go to state 5
    term        go to state 6
    single      go to state 7


State 4

    1 line_list: line .

    $default  reduce using rule 1 (line_list)


State 5

    3 line: expression . CR
    5 expression: expression . ADD term
    6           | expression . SUB term

    ADD  shift, and go to state 10
    SUB  shift, and go to state 11
    CR   shift, and go to state 12


State 6

    4 expression: term .
    8 term: term . MUL single
    9     | term . DIV single

    MUL  shift, and go to state 13
    DIV  shift, and go to state 14

    $default  reduce using rule 4 (expression)


State 7

    7 term: single .

    $default  reduce using rule 7 (term)


State 8

    0 $accept: line_list $end .

    $default  accept


State 9

    2 line_list: line_list line .

    $default  reduce using rule 2 (line_list)


State 10

    5 expression: expression ADD . term

    NUM  shift, and go to state 1
    VAR  shift, and go to state 2

    term    go to state 15
    single  go to state 7


State 11

    6 expression: expression SUB . term

    NUM  shift, and go to state 1
    VAR  shift, and go to state 2

    term    go to state 16
    single  go to state 7


State 12

    3 line: expression CR .

    $default  reduce using rule 3 (line)


State 13

    8 term: term MUL . single

    NUM  shift, and go to state 1
    VAR  shift, and go to state 2

    single  go to state 17


State 14

    9 term: term DIV . single

    NUM  shift, and go to state 1
    VAR  shift, and go to state 2

    single  go to state 18


State 15

    5 expression: expression ADD term .
    8 term: term . MUL single
    9     | term . DIV single

    MUL  shift, and go to state 13
    DIV  shift, and go to state 14

    $default  reduce using rule 5 (expression)


State 16

    6 expression: expression SUB term .
    8 term: term . MUL single
    9     | term . DIV single

    MUL  shift, and go to state 13
    DIV  shift, and go to state 14

    $default  reduce using rule 6 (expression)


State 17

    8 term: term MUL single .

    $default  reduce using rule 8 (term)


State 18

    9 term: term DIV single .

    $default  reduce using rule 9 (term)
